--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,10 +233,6 @@ header{
 
 }
 
-.titulo{
-    
-}
-
 .titulo select{
     background-color: #ffffff;
     width: fit-content;
@@ -256,14 +252,11 @@ header{
     display: flex;
 }
 
-.titulo_produtos{
-}
-
 .titulo_produtos > ul{
     justify-content: space-around;
 }
 
-.titulo_produtos button{
+.titulo_produtos > ul > button{
     margin: 2rem;
     width: 15rem;
     height: 5rem;
@@ -310,4 +303,8 @@ header{
     margin: 0 auto 6rem auto;
     width: 20rem;
     height: 7rem;
+}
+
+.titulo_produtos > ul .ativos {
+    background-color: rgba(255, 255, 255, 0.1)
 }
