--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,11 +127,14 @@ header{
     position: absolute;
     display: flex;
     visibility: hidden;
+    opacity: 0;
     flex-direction: column;
     top: 6rem;
+    transition:opacity 0.1s ease;
+}
 
-    transition:opacity 0.5s ease;
-
+.sub_menu_ativo{
+    visibility: visible;
 }
 
 .sub_menu > li{
