--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,8 +137,7 @@ header{
 .home {
     width: 100%;
     height: 100vh;
-    background-image: url(../img/Wave.svg);
-    background-attachment: fixed;
+    background-image: url(../img/background/background01.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -206,8 +205,7 @@ header{
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: url(../img/Wave.svg);
-    background-attachment: fixed;
+    background-image: url(../img/background/background02.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -367,12 +365,10 @@ header{
     width: 100%;
     background-color:#eeeaea;
     position: relative;
-    background-image: url(../img/Wave.svg);
-    background-attachment: fixed;
-    background-position: center;
+    background-image: url(../img/background/background03.svg);
     background-repeat: no-repeat;
-    background-size: cover;
-    
+    background-size:cover;
+    background-position: center;
 }
 
 .main-produtos{
