--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -7,6 +7,13 @@
     display: none;
 }
 
+
+@media screen and (max-width: 1250px){
+    .main-promocoes{
+        max-width: 90rem;
+    }
+}
+
 @media screen and (max-width : 999px){
     
 
@@ -88,10 +95,17 @@
         width: 100%;
 
     }
+
+    .main-promocoes{
+        max-width: 60rem;
+    }
+
+
 }
 
 @media screen and (max-width : 800px) {
 
+    
     .main-menu{
         height: 8vh;
     }
@@ -116,6 +130,18 @@
     .home-image-sobre{
         width: 100%;
     }
+
+    .main-promocoes{
+        max-width: 50rem;
+    }
+
+    .main-promocoes-selection {
+        margin: 10rem auto 5rem auto;
+    }
+
+    .promocoes-header-produtos > ul > button{
+        font-size: 1.3rem;
+    }
 }
 
 @media screen and (max-width : 600px){
@@ -134,6 +160,22 @@
     .home-image-sobre img{
         height: 100%;
         width: 80%;
+    }
+
+
+    .main-promocoes{
+        max-width: 35rem;
+    }
+
+    .main-promocoes-selection select{
+        padding: 1.5rem 6rem;
+        font-size: 1.6rem;
+    }
+
+    .promocoes-header-produtos > ul > button{
+        margin: 0.3rem;
+        height: 6rem;
+        font-size: 1.2rem;
     }
     
 }
