--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,6 @@ header{
 
 .main-home{
     display: flex;
-    width: 100vw;
     height: 100vh;
     justify-content: space-between;
     align-items: center;
@@ -202,10 +201,6 @@ header{
 /* parte das promoçoes da página */
 
 .promocoes{
-    background-color: #eeeaea;
-    width: 100%;
-    height: 100vh;
-    position: relative;
     background-image: url(../img/background/background02.svg);
     background-position: center;
     background-repeat: no-repeat;
@@ -219,13 +214,7 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
     border-radius: 5rem;
-
 }
 
 .angle{
@@ -236,6 +225,7 @@ header{
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.2);
     transition: background-color .5s ease;
+    display: none;
 }
 
 .angle:hover{
@@ -256,18 +246,18 @@ header{
 }
 .main-promocoes-selection{
     position: relative;
-    margin: 0 0 5rem 0 ;
-    width: fit-content;
-    height: fit-content;
+    margin: 4rem auto 5rem auto ;
 }
 .main-promocoes-selection select{
-    background-color: #ffffff;
+    background-color: #000000;
+    color: #fff;
     width: fit-content;
-    padding: 2rem 5rem;
+    padding: 2rem 6rem;
     border-radius: 10rem;
-    box-shadow: 0 0 0.7rem 0.01rem  black;
+    box-shadow: 0 0 0.7rem 0.01rem  #fff;
     outline: none;
     appearance:none;
+    font-size: 1.6rem;
 }
 
 .angleOn{
@@ -281,6 +271,7 @@ header{
     transform:translate(-90%, -50%);
     transition: transform .1s ease;
     pointer-events: none;
+    color: #fff;
 }
 .on{
     transform:translate(-90%, -80%) rotate(180deg);
@@ -293,10 +284,11 @@ header{
 .secao-promocoes-produtos ul{
     list-style-type:none;
     display: flex;
+    
 }
 
 .promocoes-header-produtos > ul{
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .promocoes-header-produtos > ul > button{
@@ -305,11 +297,12 @@ header{
     height: 5rem;
     text-align: center;
     line-height: 5rem;
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.6);
     box-shadow: 0 0 0.7rem 0.01rem  black;
     border-radius: 5rem;
     cursor: pointer;
     border: none;
+    font-size: 1.6rem;
 }
 
 .promocoes-cards-produtos{
@@ -334,7 +327,7 @@ header{
     background-color: rgba(156, 156, 156, 0.2);
     box-shadow: 0 0 0.7rem 0.01rem  rgb(0, 0, 0);
     border-radius: 5rem;
-    margin: 0 2rem 0 2rem;
+    margin: 0 2rem;
     text-align: center;
 }
 
@@ -359,6 +352,8 @@ header{
     color: rgb(255, 255, 255);
     box-shadow: 0 0 0.7rem 0.01rem  rgb(255, 20, 147);
 }
+
+
 
 /* seção dos produtos */
 
