--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -132,7 +132,7 @@
     }
 
     .main-promocoes{
-        max-width: 50rem;
+        max-width: 100%;
     }
 
     .main-promocoes-selection {
@@ -164,7 +164,7 @@
 
 
     .main-promocoes{
-        max-width: 35rem;
+        max-width: 100%;
     }
 
     .main-promocoes-selection select{
@@ -173,7 +173,7 @@
     }
 
     .promocoes-header-produtos > ul > button{
-        margin: 0.3rem;
+        margin: 1rem;
         height: 6rem;
         font-size: 1.2rem;
     }
