--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap');
 
 *{
     padding:0;
@@ -46,19 +46,18 @@ header{
     height: 100%;
 }
 
-.logo-texto {
-  width: 300px;
-  height: 50px;
-  border-radius: 50% 50% 0 0;
-  background-color: white;
-  border:2px solid pink;
-}
+.logo-texto span{
+    
+    
+    color: #f3759f;
+}   
 
 .logo-texto h1{
-    font-family: 'Pacifico', cursive;
+    font-family: 'Tilt Warp', cursive;
     font-size: 3rem;
     text-align: center;
-    color: #f3759f;
+    color: #000;
+    
 }
 
 .redes-sociais ul{
@@ -195,7 +194,8 @@ header{
 }
 .home-image-sobre img{
     height: 100%;
-    width: 70%;
+    width: 100%;
+ 
 }
 
 /* parte das promoçoes da página */
@@ -245,19 +245,29 @@ header{
     transform: rotate(180deg);
 }
 .main-promocoes-selection{
-    position: relative;
-    margin: 4rem auto 5rem auto ;
+    width: 100%;
+    margin: 5.6rem auto 2.8rem auto ;
+    display: flex;
+    justify-content: center;
+    gap: 8.5rem;
 }
-.main-promocoes-selection select{
+.main-promocoes-selection .button-promocoes{
     background-color: #000000;
     color: #fff;
-    width: fit-content;
-    padding: 2rem 6rem;
-    border-radius: 10rem;
+    width: 15rem;
+    height: 5.3rem;
+    border-radius: 1rem;
     box-shadow: 0 0 0.7rem 0.01rem  #fff;
-    outline: none;
-    appearance:none;
     font-size: 1.6rem;
+    outline: none;
+    border: none;
+}
+
+.button-promocoes.ativos{
+    background-color: rgba(0, 0, 0, 0.4);
+    border:.2rem solid #000000;
+    color: rgb(255, 255, 255);
+    box-shadow: 0 0 0.7rem 0.01rem  rgb(255, 20, 147);
 }
 
 .angleOn{
@@ -279,74 +289,103 @@ header{
 
 .secao-promocoes-produtos {
     width: 100%;
+
 }
 
 .secao-promocoes-produtos ul{
     list-style-type:none;
     display: flex;
     
+    
 }
 
 .promocoes-header-produtos > ul{
     justify-content: center;
+    gap: 13.8rem;
 }
 
 .promocoes-header-produtos > ul > button{
-    margin: 2rem;
-    width: 15rem;
-    height: 5rem;
+    width: 10.2rem;
+    height: 3.2rem;
     text-align: center;
-    line-height: 5rem;
+    line-height: 3.2rem;
     background-color: rgba(255, 255, 255, 0.6);
     box-shadow: 0 0 0.7rem 0.01rem  black;
-    border-radius: 5rem;
+    border-radius: 1rem;
     cursor: pointer;
     border: none;
     font-size: 1.6rem;
 }
 
 .promocoes-cards-produtos{
-    height: 50rem;
-    padding: 0 3rem;
+    margin: 4.2rem 0 0 0;
 
 }
 .promocoes-cards-produtos ul{
     height: 100%;
     display: flex;
     align-items: center;
-    overflow: auto;
+    overflow-y: hidden;
+    overflow-x: scroll;
     scroll-behavior: smooth;
+    gap: 1.6rem;
+    padding: 1rem;
 }
 
 .promocoes-cards-produtos ul::-webkit-scrollbar {
     display: none;
 }
 .promocoes-cards-produtos li{
-    width: 30rem;
-    height: fit-content;
-    background-color: rgba(156, 156, 156, 0.2);
+    height: 50rem ;
+    background-color: #fff;
     box-shadow: 0 0 0.7rem 0.01rem  rgb(0, 0, 0);
     border-radius: 5rem;
-    margin: 0 2rem;
     text-align: center;
 }
 
 .promocoes-cards-produtos > ul > li > img{
-    width: 20rem;
-    height: 20rem;
-    background-color: aqua;
-    margin: 5rem;
+    width: 27.3rem;
+    height: 27.3rem;
+    padding: 0.4rem;
     border-radius: 5rem;
 }
 
 .promocoes-cards-produtos > ul > li > div{
-
-    text-align: start;
-    margin: 0 auto 6rem auto;
-    width: 20rem;
-    height: 7rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding: 0 0 0 2rem;
 }
 
+.marca-promocoes {
+    font-size: 1.4rem;
+    margin: 1rem 0 0.6rem 0;
+    text-align: start;
+ 
+}
+
+.modelo-promocoes {
+    font-size: 1.6rem;
+    text-align: start;
+}
+
+.preco-antigo-promocoes{
+    font-size: 1.4rem;
+    margin: 1rem 0 0 0;
+    text-align: start;
+    text-decoration: line-through;
+}
+
+.preco-atual-promocoes{
+    font-size: 2rem;
+    text-align: start;
+}
+
+.button-interesse{
+    margin: 5rem 0;
+    width: 23.4rem;
+    height: 4.2rem;
+    border: 0.2rem solid #F4AB34;
+}
 .promocoes-header-produtos > ul .ativos {
     background-color: rgba(0, 0, 0, 0.4);
     color: rgb(255, 255, 255);
@@ -358,7 +397,7 @@ header{
 /* seção dos produtos */
 
 .secao-produtos{
-    width: 100%;
+
     background-color:#eeeaea;
     position: relative;
     background-image: url(../img/background/background03.svg);
