--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -20,6 +20,7 @@
     .main-menu{
         background-color: #E1306C;
         padding: 0 10rem;
+        width: 100vw;
     }
 
     .main-home{
@@ -92,7 +93,11 @@
 
 
     .main-promocoes{
-        max-width: 60rem;
+        max-width: 80rem;
+    }
+
+    .angle{
+        display: none;
     }
 
 
@@ -127,15 +132,42 @@
     }
 
     .main-promocoes{
-        max-width: 100%;
+        max-width: 95%;
+        margin: 5rem auto 0 auto;
     }
 
     .main-promocoes-selection {
-        margin: 10rem auto 5rem auto;
+        margin: 5rem 0;
+        gap: 5rem;
+    }
+
+    .promocoes-header-produtos > ul{
+        gap: 6rem;
     }
 
     .promocoes-header-produtos > ul > button{
         font-size: 1.3rem;
+    }
+
+    .produtos-imagens-cards{
+
+        width: 60rem;
+
+    }
+
+    .produtos-categorias > h1{
+        width: 50rem;
+        font-size: 3rem;
+    }
+
+    .btn-link-produtos{
+        
+        
+      
+        padding: 1rem 1rem;
+        border-radius: 1rem;
+        color: #ffffff;
+        font-size: 1.6rem;
     }
 }
 
@@ -159,7 +191,11 @@
 
 
     .main-promocoes{
-        max-width: 100%;
+        max-width: 95%;
+    }
+
+    .main-promocoes-selection{
+        gap: 2rem;
     }
 
     .main-promocoes-selection select{
@@ -167,9 +203,52 @@
         font-size: 1.6rem;
     }
 
+    .promocoes-header-produtos > ul{
+        gap: 1rem;
+    }
+
     .promocoes-header-produtos > ul > button{
         margin: 1rem;
-        height: 6rem;
+        font-size: 1.2rem;
+    }
+
+    
+
+    .produtos-header{
+        width: 40rem;
+    }
+
+    .produtos-header h1{
+        font-size: 5rem;
+    }
+
+    .produtos-header p{
+        font-size: 3rem;
+    }
+
+    .produtos-categorias > h1{
+        width: 40rem;
+        font-size: 3rem;
+    }
+
+    .produtos-imagens-cards{
+
+        width: 40rem;
+
+    }
+
+    .produtos-img{
+        height: 15rem;
+    }
+    
+
+    .btn-link-produtos{
+        
+        
+      
+        padding: 1rem 1rem;
+        border-radius: 1rem;
+        color: #ffffff;
         font-size: 1.2rem;
     }
     
